--- a/src/main/resources/ubb/scs/socialnetworkgui/views/index.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/index.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.HBox?>
 
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="ubb.scs.socialnetworkgui.gui.Controller">
+      fx:controller="ubb.scs.socialnetworkgui.gui.StartPageController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
