--- a/src/main/resources/ubb/scs/socialnetworkgui/views/login.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/login.fxml
@@ -2,28 +2,26 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
 
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.PasswordField?>
+
 <?import javafx.scene.layout.HBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="ubb.scs.socialnetworkgui.gui.SignUp">
+      fx:controller="ubb.scs.socialnetworkgui.gui.LoginController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Label text="Sign Up" styleClass="label_title"/>
+    <Label text="Log In" styleClass="label_title"/>
     <TextField fx:id="username" promptText="Username" styleClass="text-field"/>
-    <TextField fx:id="first_name" promptText="First Name" styleClass="text-field"/>
-    <TextField fx:id="last_name" promptText="Last Name" styleClass="text-field"/>
     <PasswordField fx:id="password" promptText="Password" styleClass="text-field"/>
     <HBox alignment="CENTER" spacing="20.0">
-        <Button fx:id="submit" text="Submit" onAction="#onSubmitClick"/>
+        <Button fx:id="login" text="Login" onAction="#onLoginClick"/>
         <Button fx:id="back" text="Back" onAction="#onBackClick"/>
     </HBox>
-
     <Label fx:id="error" styleClass="error"/>
 
 </VBox>
