--- a/src/main/resources/ubb/scs/socialnetworkgui/views/changeinfo.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/changeinfo.fxml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
+
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<?import javafx.scene.control.Button?>
+
 <?import javafx.scene.control.TextField?>
-<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.FriendsListController">
+<?import javafx.scene.control.Button?>
+
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.ChangeInfoController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
@@ -47,15 +54,28 @@
             </HBox>
         </HBox>
     </HBox>
-    <HBox fx:id="searchContainer" spacing="5" alignment="CENTER">
-        <TextField fx:id="searchField" promptText="Search..." styleClass="search_bar"/>
-        <Button fx:id="searchButton" text="🔍" styleClass="search_button" onAction="#onSearchClick"/>
-    </HBox>
-
-    <VBox fx:id="search" alignment="CENTER" visible="false" spacing="20" styleClass="vbox"/>
-
-    <VBox spacing="20" alignment="CENTER">
-        <Label text="Friends List" alignment="CENTER" styleClass="label_title"/>
-        <VBox fx:id="friendsList" visible="false" spacing="10" alignment="CENTER"/>
+    <VBox alignment="TOP_CENTER" spacing="20" >
+        <HBox alignment="CENTER" spacing="5">
+            <ImageView fitHeight="25" fitWidth="25" styleClass="image_menu">
+                <Image url="/ubb/scs/socialnetworkgui/images/changedata.png"/>
+            </ImageView>
+            <Label fx:id="labelTitle" text="Change INFO" styleClass="label_title"/>
+        </HBox>
+        <TextField fx:id="textFieldFirstName" promptText="New First Name..." styleClass="text_field"/>
+        <TextField fx:id="textFieldLastName" promptText="New Last Name..." styleClass="text_field"/>
+        <Button fx:id="buttonChangeInfo" text="Change Info" styleClass="button_menu"/>
+        <Separator styleClass="menu_separator"/>
+        <HBox alignment="CENTER" spacing="5">
+            <ImageView fitHeight="25" fitWidth="25" styleClass="image_menu">
+                <Image url="/ubb/scs/socialnetworkgui/images/changepassword.png"/>
+            </ImageView>
+            <Label text="Change Password" styleClass="label_title"/>
+        </HBox>
+        <PasswordField fx:id="passwordOldField" promptText="Old Password..." styleClass="text_field"/>
+        <Label fx:id="errorPassword" visible="false" styleClass="error_label"/>
+        <PasswordField fx:id="passwordNewField" promptText="New Password..." styleClass="text_field"/>
+        <PasswordField fx:id="passwordConfirmField" promptText="Confirm New Password..." styleClass="text_field"/>
+        <Button fx:id="buttonChangePassword" text="Change Password" onAction="#onChangePasswordClick" styleClass="button_menu"/>
     </VBox>
+
 </VBox>
