--- a/src/main/resources/ubb/scs/socialnetworkgui/views/currentChat.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/currentChat.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.layout.HBox?>
@@ -9,7 +8,9 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.FriendsListController">
+
+<?import javafx.scene.control.ScrollPane?>
+<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.CurrentChatController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
@@ -54,8 +55,18 @@
 
     <VBox fx:id="search" alignment="CENTER" visible="false" spacing="20" styleClass="vbox"/>
 
-    <VBox spacing="20" alignment="CENTER">
-        <Label text="Friends List" alignment="CENTER" styleClass="label_title"/>
-        <VBox fx:id="friendsList" visible="false" spacing="10" alignment="CENTER"/>
-    </VBox>
+    <ScrollPane prefWidth="800" prefHeight="600" styleClass="scroll_panel" hbarPolicy="NEVER">
+        <VBox fx:id="messagesList" visible="false" spacing="10" alignment="CENTER"/>
+    </ScrollPane>
+
+    <HBox alignment="CENTER" spacing="5">
+        <TextField fx:id="message" promptText="Type a message..." styleClass="search_bar"/>
+        <Button fx:id="buttonSend" styleClass="button_add" onAction="#onSendClick">
+            <graphic>
+                <ImageView fitHeight="25" fitWidth="25" styleClass="image_menu">
+                    <Image url="/ubb/scs/socialnetworkgui/images/sendmessage.png"/>
+                </ImageView>
+            </graphic>
+        </Button>
+    </HBox>
 </VBox>
