--- a/src/main/resources/ubb/scs/socialnetworkgui/views/friendrequests.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/friendrequests.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.FriendRequestsController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
@@ -20,7 +20,7 @@
                     <ImageView fitHeight="25" fitWidth="25" styleClass="image_menu">
                         <Image url="/ubb/scs/socialnetworkgui/users_logo/usernologo.png"/>
                     </ImageView>
-                    <Button fx:id="buttonProfile" text="Profile" styleClass="button_menu" onAction="#onProfileClick"/>
+                    <Button fx:id="buttonChats" text="Chats" styleClass="button_menu" onAction="#onChatsClick"/>
                 </HBox>
 
                 <HBox styleClass="menu_item" alignment="CENTER" spacing="5">
@@ -51,7 +51,7 @@
         <Button fx:id="searchButton" text="🔍" styleClass="search_button" onAction="#onSearchClick"/>
     </HBox>
 
-    <HBox fx:id="searchBox" alignment="CENTER" visible="false" spacing="20"/>
+    <VBox fx:id="search" alignment="CENTER" visible="false" spacing="20" styleClass="vbox"/>
     <VBox alignment="CENTER" spacing="20">
         <Label text="Friend Requests" alignment="CENTER" styleClass="label_title"/>
         <VBox fx:id="friendRequestsList" visible="false" spacing="10" alignment="CENTER"/>
