--- a/src/main/resources/ubb/scs/socialnetworkgui/views/userpage.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/userpage.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
 
-<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml">
+<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.UserPageController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
@@ -26,7 +26,7 @@
                     <ImageView fitHeight="25" fitWidth="25" styleClass="image_menu">
                         <Image url="/ubb/scs/socialnetworkgui/users_logo/usernologo.png"/>
                     </ImageView>
-                    <Button fx:id="buttonProfile" text="Profile" styleClass="button_menu" onAction="#onProfileClick"/>
+                    <Button fx:id="buttonChats" text="Chats" styleClass="button_menu" onAction="#onChatsClick"/>
                 </HBox>
 
                 <HBox styleClass="menu_item" alignment="CENTER" spacing="5">
@@ -57,6 +57,6 @@
         <Button fx:id="searchButton" text="🔍" styleClass="search_button" onAction="#onSearchClick"/>
     </HBox>
 
-    <HBox fx:id="searchBox" alignment="CENTER" visible="false" spacing="20"/>
+    <VBox fx:id="search" alignment="CENTER" visible="false" spacing="20" styleClass="vbox"/>
 
 </VBox>
