--- a/src/main/resources/ubb/scs/socialnetworkgui/views/chats.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/chats.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.TextField?>
 
 <?import javafx.scene.control.ScrollPane?>
-<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.CurrentChatController">
+<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.ChatsController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
@@ -20,7 +20,7 @@
             <HBox styleClass="menu" spacing="15">
                 <HBox styleClass="menu_item" alignment="CENTER" spacing="5">
                     <ImageView fitHeight="25" fitWidth="25" styleClass="image_menu">
-                        <Image url="/ubb/scs/socialnetworkgui/users_logo/usernologo.png"/>
+                        <Image url="/ubb/scs/socialnetworkgui/images/allusers.png"/>
                     </ImageView>
                     <Button fx:id="buttonChats" text="Chats" styleClass="button_menu" onAction="#onChatsClick"/>
                 </HBox>
