--- a/src/main/resources/ubb/scs/socialnetworkgui/views/currentChat.fxml
+++ b/src/main/resources/ubb/scs/socialnetworkgui/views/currentChat.fxml
@@ -10,7 +10,9 @@
 <?import javafx.scene.control.TextField?>
 
 <?import javafx.scene.control.ScrollPane?>
-<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.CurrentChatController">
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.Label?>
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="ubb.scs.socialnetworkgui.gui.CurrentChatController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
@@ -20,7 +22,7 @@
             <HBox styleClass="menu" spacing="15">
                 <HBox styleClass="menu_item" alignment="CENTER" spacing="5">
                     <ImageView fitHeight="25" fitWidth="25" styleClass="image_menu">
-                        <Image url="/ubb/scs/socialnetworkgui/users_logo/usernologo.png"/>
+                        <Image url="/ubb/scs/socialnetworkgui/images/allusers.png"/>
                     </ImageView>
                     <Button fx:id="buttonChats" text="Chats" styleClass="button_menu" onAction="#onChatsClick"/>
                 </HBox>
@@ -52,13 +54,23 @@
         <TextField fx:id="searchField" promptText="Search..." styleClass="search_bar"/>
         <Button fx:id="searchButton" text="🔍" styleClass="search_button" onAction="#onSearchClick"/>
     </HBox>
+    <StackPane>
+        <VBox fx:id="search" prefHeight="700" prefWidth="700" maxHeight="700" maxWidth="700" alignment="CENTER" visible="false" spacing="20" styleClass="vbox"/>
+        <VBox spacing="20">
+            <HBox alignment="CENTER" spacing="10">
+                <ImageView fitHeight="40" fitWidth="40">
+                    <Image fx:id="imageLogo" url="/ubb/scs/socialnetworkgui/users_logo/usernologo.png" />
+                </ImageView>
+                <Label fx:id="usernameLabel" text="Username" styleClass="search_label"/>
+            </HBox>
 
-    <VBox fx:id="search" alignment="CENTER" visible="false" spacing="20" styleClass="vbox"/>
-
-    <ScrollPane prefWidth="800" prefHeight="600" styleClass="scroll_panel" hbarPolicy="NEVER">
-        <VBox fx:id="messagesList" visible="false" spacing="10" alignment="CENTER"/>
-    </ScrollPane>
-
+            <VBox alignment="CENTER" prefWidth="700" prefHeight="600">
+                <ScrollPane fx:id="scrollPane" prefWidth="700" prefHeight="600" maxWidth="700" maxHeight="600" styleClass="scroll_panel" hbarPolicy="NEVER">
+                    <VBox fx:id="messagesList" prefWidth="680" prefHeight="580" maxWidth="680" maxHeight="580" visible="false" spacing="10" alignment="CENTER" styleClass="chat_box"/>
+                </ScrollPane>
+            </VBox>
+        </VBox>
+    </StackPane>
     <HBox alignment="CENTER" spacing="5">
         <TextField fx:id="message" promptText="Type a message..." styleClass="search_bar"/>
         <Button fx:id="buttonSend" styleClass="button_add" onAction="#onSendClick">
